# air-remote-mediator

./: Cargo.toml  Dockerfile  build.sh
src/: i2c.rs  main.rs  mqtt.rs  serial.rs  sony_commands.rs  transactional_receiver.rs
sticker/: air-remote.studio3
