[package]
name = "air-remote-mediator"
version = "0.1.0"
edition = "2024"

[dependencies]
rppal = "0.22.1"
rumqttc = "0.25.0"
serde = { version = "1.0.193", features = ['derive'] }
serde_json = "1.0.108"
serialport = { version = "4.8.1", default-features = false }
tokio = { version = "1.47.1", features = [
	'default',
	'sync',
	'rt-multi-thread',
] }
